--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
         // Firebase настройки
         const firebaseConfig = {
-            apiKey: "API_KEY",
+            apiKey: "AIzaSyDndBcV29tFvBX-RGzCIAUVEnVy8G5GdJc",
             authDomain: "whopper-a32f7.firebaseapp.com",
             projectId: "whopper-a32f7",
             storageBucket: "whopper-a32f7.appspot.com",
