--- a/index.html
+++ b/index.html
@@ -274,8 +274,7 @@
             projectId: "whopper-a32f7",
             storageBucket: "whopper-a32f7.appspot.com",
             messagingSenderId: "701387895307",
-            appId: "1:701387895307:web:cc656083f5f0ed1c590d0e",
-            measurementId: "G-PQ6JZEZMEP"
+            appId: "1:701387895307:web:cc656083f5f0ed1c590d0e"
         };
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
